syntax = "proto3";

package auth.user.account.modify.service;

service ModifyAuthUserAccountPb {
    rpc ModifyUser (ModifyAuthUserAccountRequestPb) returns (ModifyAuthUserAccountResponsePb);
}
message ModifyAuthUserAccountRequestPb {
    string login_id = 1;
    ModifyAuthUserAccountDataPb from = 2;
    ModifyAuthUserAccountDataPb to = 3;
}
message ModifyAuthUserAccountResponsePb {
    bool success = 1;
    ModifyAuthUserAccountDataPb data = 2;
    ModifyAuthUserAccountErrorKindPb err = 3;
}
enum ModifyAuthUserAccountErrorKindPb {
    CONFLICT = 0;
    NOT_FOUND = 1;
    INVALID = 2;
}
message ModifyAuthUserAccountDataPb {
    repeated string granted_roles = 1;
}
